codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_picker_global_chord.snap
---
source: tui/src/keymap_setup.rs
assertion_line: 1182
expression: "render_picker(params, 120)"
---

  Keymap
  All configurable shortcuts.
  117 actions, 2 customized, 4 unbound.

  [All]  Common  Customized (2)  Unbound (4)  App  Composer  Editor  Vim  Navigation  Approval  Debug

  Type to search shortcuts
› Global       * Open Transcript            ctrl-t, ctrl-x ctrl-t
  Global       * Toggle Rules Sidebar       unbound
  Global         Open External Editor       ctrl-g
  Global         Copy                       ctrl-o
  Global         Clear Terminal             ctrl-l
  Global       - Toggle Vim Mode            unbound
  Global         Toggle Raw Output          alt-r
  Global         Toggle Side Conversation   ctrl-/

  left/right group · enter edit shortcut · * custom · - unbound · esc close
